--- a/style/components/homepage.css
+++ b/style/components/homepage.css
@@ -1,15 +1,22 @@
 .hero {
     margin-top: 5em;
     display: flex;
-    justify-content: center;
-    gap: 10em;
+    justify-content: space-between;
+    /* gap: 5em; */
+    min-height: 85dvh;
+}
+
+.hero > div > h1 {
+    font-size: 3.5rem;
+    margin-bottom: .5rem;
+    font-weight: 900;
 }
 
 .heroParagraph {
-    margin-bottom: 1em;
+    margin-bottom: 1.5em;
 }
 
 .heroImg {
-    width: 25em;
+    width: 30em;
 }
 
