--- a/style/style.css
+++ b/style/style.css
@@ -15,7 +15,7 @@
   --no: #b91c1c;
 
   /*Primary rgba: 	rgba(253, 154, 0, 1) */
-  /*accent rgba: 	rgba(0, 153, 102, 1)  */
+  /*secondary rgba: 	rgba(0, 153, 102, 1)  */
 }
 
 * {
@@ -34,8 +34,8 @@ body {
   overflow-x: hidden;
   /* background-color: var(--background); */
   background-color: var(--background);
-  background-image: radial-gradient(oklch(0.844 0.0136 262.37) 1px, transparent 1px);
-  background-size: 20px 20px;
+  background-image: radial-gradient(oklch(0.88 0.0148 264.49) 1.5px, transparent 1.5px);
+  background-size: 25px 25px;
   color: var(--text);
 }
 
@@ -46,12 +46,11 @@ canvas {
   display: block;
   max-width: 100%;
   user-select: none;
-  user-drag: none;
-    -webkit-user-drag: none;
-    user-select: none;
-    -moz-user-select: none;
-    -webkit-user-select: none;
-    -ms-user-select: none;
+  -webkit-user-drag: none;
+  user-select: none;
+  -moz-user-select: none;
+  -webkit-user-select: none;
+  -ms-user-select: none;
 }
 
 button {
