--- a/style/components/header.css
+++ b/style/components/header.css
@@ -1,32 +1,34 @@
 header {
-    display: flex;
-    justify-content: space-between;
-    /* padding-left: 3.5em; */
-    /* padding-right: 3.5em; */
+  display: flex;
+  justify-content: space-between;
+  /* padding-left: 3.5em; */
+  /* padding-right: 3.5em; */
 }
 
 header > * {
-    flex: 1;
-    display: flex;
-    align-items: center;
-    justify-content: center;    
+  flex: 1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 .headerTitle {
-    justify-content: start;
-    /* padding-left: 2em; */
+  justify-content: start;
+  /* padding-left: 2em; */
 }
 
 .headerLinks {
-    display: flex;
-    gap: .5em;
+  display: flex;
+  gap: 1em;
+  font-size: 1.15rem;
+  font-weight: 600;
 }
 
 .headerLink:hover {
-    transition: 0.3s ease;
-    color: var(--primary);
+  transition: 0.3s ease;
+  color: var(--primary);
 }
 
 .headerCallToAction {
-    justify-content: end;
-    /* padding-right: 2em; */
+  justify-content: end;
+  /* padding-right: 2em; */
 }
