--- a/style/components/homepage.css
+++ b/style/components/homepage.css
@@ -1,22 +1,21 @@
 .hero {
-    margin-top: 5em;
-    display: flex;
-    justify-content: space-between;
-    /* gap: 5em; */
-    min-height: 85dvh;
+  margin-top: 5em;
+  display: flex;
+  justify-content: space-between;
+  /* gap: 5em; */
+  min-height: 85dvh;
 }
 
 .hero > div > h1 {
-    font-size: 3.5rem;
-    margin-bottom: .5rem;
-    font-weight: 900;
+  font-size: 3.5rem;
+  margin-bottom: 0.5rem;
+  font-weight: 900;
 }
 
 .heroParagraph {
-    margin-bottom: 1.5em;
+  margin-bottom: 1.5em;
 }
 
 .heroImg {
-    width: 30em;
+  width: 30em;
 }
-
