--- a/style/components/top.css
+++ b/style/components/top.css
@@ -22,6 +22,12 @@
   border-radius: 1em;
   /* border: red 1px solid; */
   position: relative;
+  transition: 0.3s ease-out;
+}
+
+.topCard:hover {
+  transform: scale(1.015);
+  box-shadow: 0px 40px 50px -35px oklch(from var(--black) l c h / calc(alpha - 0.5));
 }
 
 .topCardInfo {
