--- a/style/utils.css
+++ b/style/utils.css
@@ -1,8 +1,10 @@
 @import url("normalize.css");
 @import url("style.css");
 @import url("components/header.css");
+@import url("components/footer.css");
 @import url("components/homepage.css");
-@import url("components/top.css");
+@import url("components/top.css"); 
+@import url("components/timeline.css"); 
 
 .btnPrimary {
   display: flex;
