--- a/style/components/order.css
+++ b/style/components/order.css
@@ -11,7 +11,7 @@
   gap: 5em;
   flex: 0 0 auto;
   width: 100%;
-  transition: 2s ease-in-out;
+  transition: 2s cubic-bezier(.31,.99,.31,1);
 }
 
 .categoryOption {
@@ -58,14 +58,15 @@
 .orderPageButton {
   font-family: "Roboto Mono", monospace;
   font-weight: 700;
+  border: solid 2px transparent !important;
 }
 
-.orderCategoryOne {
-  transform: translateX(0%);
+.orderButtonSelected {
+  border: solid 2px var(--black) !important;
 }
-.orderCategoryTwo {
-  transform: translateX(-100%);
-}
-.orderCategoryThree {
-  transform: translateX(-200%);
+
+.selectedSetOne, .selectedSetTwo, .selectedSetThree {
+  transform: scale(1.015);
+  box-shadow: 0px 40px 50px -35px oklch(from var(--secondary) l c h ) !important;
+  background: oklch(from var(--secondary) calc(l + 0.1) c h / calc(alpha - 0.6));
 }
