--- a/style/components/header.css
+++ b/style/components/header.css
@@ -3,24 +3,35 @@ header {
   justify-content: space-between;
   /* padding-left: 3.5em; */
   /* padding-right: 3.5em; */
+  padding: 1em 0;
 }
 
 header > * {
   flex: 1;
-  display: flex;
-  align-items: center;
-  justify-content: center;
 }
+
+.headerNav {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .headerTitle {
+  display: none;  
   justify-content: start;
+  align-items: center;
   /* padding-left: 2em; */
+}
+
+.headerTitle > h1 {
+  margin: 0;
 }
 
 .headerLinks {
   display: flex;
   gap: 1em;
-  font-size: 1.15rem;
-  font-weight: 600;
+  font-size: 0.8rem;
+  font-weight: 900;
 }
 
 .headerLink:hover {
@@ -32,6 +43,42 @@ header > * {
 }
 
 .headerCallToAction {
+  display: flex;
+  align-items: center;
   justify-content: end;
   /* padding-right: 2em; */
+  font-size: 0.9rem;
 }
+
+/* xs */
+/* @media (min-width: 475px) {} */
+
+/* sm */
+@media (min-width: 640px) {
+  .headerLinks {
+    font-size: 1rem;
+  }
+}
+
+/* md */
+/* @media (min-width: 768px) {} */
+
+/* lg */
+@media (min-width: 1024px) {
+  .headerTitle {
+    display: flex;
+  }
+  .headerLinks {
+    font-size: 1.2rem;
+  }
+
+  .headerCallToAction {
+    font-size: 1rem;
+  }
+}
+
+/* xl */
+/* @media (min-width: 1280px) {} */
+
+/* 2xl */
+/* @media (min-width: 1536px) {} */
