--- a/style/components/homepage.css
+++ b/style/components/homepage.css
@@ -1,21 +1,88 @@
 .hero {
   margin-top: 5em;
   display: flex;
-  justify-content: space-between;
-  /* gap: 5em; */
+  flex-direction: column;
+  justify-content: start;
+  align-items: center;
+  text-align: center;
+  gap: 5em;
   min-height: 85dvh;
 }
 
+.hero > div {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 .hero > div > h1 {
-  font-size: 3.5rem;
+  font-size: 2rem;
   margin-bottom: 0.5rem;
   font-weight: 900;
 }
 
 .heroParagraph {
   margin-bottom: 1.5em;
+  font-size: 0.65rem;
 }
 
 .heroImg {
-  width: 30em;
+  width: 20em;
 }
+
+.heroButton {
+  font-size: 0.8rem;
+}
+
+/* xs */
+@media (min-width: 475px) {
+  .hero > div > h1 {
+  font-size: 2.5rem;
+}
+.heroParagraph {
+  font-size: 0.8rem;
+}
+.heroButton {
+  font-size: 1rem;
+}
+}
+
+/* sm */
+/* @media (min-width: 640px) {} */
+
+/* md */
+@media (min-width: 768px) {
+  .hero {
+    display: flex;
+    justify-content: space-between;
+    flex-direction: row;
+    align-items: start;
+    text-align: start;
+    gap: 0;
+  }
+
+  .heroImg {
+    width: 30em;
+  }
+
+  .hero > div {
+    display: block;
+  }
+}
+
+/* lg */
+@media (min-width: 1024px) {
+  .hero > div > h1 {
+    font-size: 3.5rem;
+  }
+
+  .heroParagraph {
+    font-size: 1rem;
+  }
+}
+
+/* xl */
+/* @media (min-width: 1280px) {} */
+
+/* 2xl */
+/* @media (min-width: 1536px) {} */
