--- a/style/utils.css
+++ b/style/utils.css
@@ -7,6 +7,9 @@
 @import url("components/timeline.css");
 @import url("components/authenticate.css");
 @import url("components/order.css");
+@import url("components/generator.css");
+@import url("components/playground.css");
+@import url("components/toast.css");
 
 .btnPrimary {
   display: flex;
@@ -87,20 +90,24 @@
 }
 
 .cardShadow {
-  box-shadow: 0px 35px 75px -50px oklch(from var(--black) l c h /
-        calc(alpha - 0.25));
-}
-
-.cardShadow {
   box-shadow: 0px 35px 75px -50px oklch(from var(--black) l c h / calc(alpha - 0.25));
 }
 
 .input {
-  background-color: var(--accent);
-  border: none;
+  width: 100%;
+  height: 1.5rem;
+  background-color: oklch(from var(--white) calc(l - 0.05) c h);
+  border-radius: .5rem;
+  padding: 1.2rem 1.5rem;
+  border: 2px solid transparent;
+  font-size: 1rem;
+  transition: .3s cubic-bezier(.25,.01,.25,1) 0s;
+  margin-bottom: 1em;
+}
+
+.input:hover, .input:focus {
   outline: none;
-  padding: 0.5rem 1rem;
-  font-weight: 600;
+  border-color: var(--black);
 }
 
 .noStyleUL {
