--- a/style/components/toast.css
+++ b/style/components/toast.css
@@ -15,7 +15,9 @@
         calc(alpha - 0.25));
   /* position: relative; */
   overflow: hidden;
-}   
+
+  display: none;
+}
 
 .toastProgress {
   position: absolute;
@@ -24,7 +26,16 @@
   height: 4px;
   width: 0%;
   background: var(--primary);
-  animation: toastTimer 5s linear forwards;
+  animation: toastTimer 3s ease forwards;
+}
+
+.toastProgressFade {
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 3em;
+    height: 4px;
+    background: linear-gradient(to right, var(--primary), var(--white));
 }
 
 .toastIcon {
@@ -55,6 +66,6 @@
 
 @keyframes toastTimer {
   to {
-    width: 100%;
+    width: 120%;
   }
 }
