--- a/style/utils.css
+++ b/style/utils.css
@@ -10,6 +10,7 @@
 @import url("components/generator.css");
 @import url("components/playground.css");
 @import url("components/toast.css");
+@import url("components/tooltip.css");
 
 .btnPrimary {
   display: flex;
@@ -95,10 +96,9 @@
 
 .input {
   width: 100%;
-  height: 1.5rem;
   background-color: oklch(from var(--white) calc(l - 0.05) c h);
   border-radius: .5rem;
-  padding: 1.2rem 1.5rem;
+  padding: 0.8rem 1.2rem;
   border: 2px solid transparent;
   font-size: 1rem;
   transition: .3s cubic-bezier(.25,.01,.25,1) 0s;
@@ -131,6 +131,12 @@
 .removeArrow::-webkit-inner-spin-button {
   -webkit-appearance: none;
   margin: 0;
+}
+
+.removeArrow {
+  -webkit-appearance: none;
+  appearance: none;
+  background-image: none;
 }
 
 .hidden {
