--- a/style/components/generator.css
+++ b/style/components/generator.css
@@ -110,7 +110,7 @@
   pointer-events: auto;
 }
 
-.codesDropdownButton {
+.codesDropdownButton, .codesDropdownButtonCopy {
   padding: .75em 1em;
   background: transparent;
   width: 100%;
@@ -121,7 +121,7 @@
   transition: 0.3s ease;
 }
 
-.codesDropdownButton:not(:last-child) {
+.codesDropdownButton:not(:last-child), .codesDropdownButtonCopy {
   border-bottom: 1px solid var(--white-soft);
 }
 
@@ -130,21 +130,21 @@
 }
 
 /* Copy button */
-.codesDropdownButton:nth-child(1):hover {
+.codesDropdownButtonCopy:hover {
   color: var(--info);
   box-shadow: 0 10px 20px -10px var(--info);
   background: oklch(from var(--info) l c h / calc(alpha - 0.90));
 }
 
 /* Renew button */
-.codesDropdownButton:nth-child(2):hover {
+.codesDropdownButton:nth-child(1):hover {
   color: var(--warning);
   box-shadow: 0 10px 20px -10px var(--warning);
   background: oklch(from var(--warning) l c h / calc(alpha - 0.90));
 }
 
 /* Delete button */
-.codesDropdownButton:nth-child(3):hover {
+.codesDropdownButton:nth-child(2):hover {
   color: var(--error);
   box-shadow: 0 10px 20px -10px var(--error);
   background: oklch(from var(--error) l c h / calc(alpha - 0.90));
