--- a/style/utils.css
+++ b/style/utils.css
@@ -111,6 +111,47 @@
   border-color: var(--black);
 }
 
+.checkbox {
+  appearance: none;
+  width: 20px;
+  height: 20px;
+  border: 2px solid var(--primary);
+  border-radius: 5px;
+  background-color: transparent;
+  display: inline-block;
+  position: relative;
+  margin-right: 10px;
+  cursor: pointer;
+}
+
+.checkbox:before {
+  content: "";
+  background-color: var(--primary);
+  display: block;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) scale(0);
+  width: 10px;
+  height: 10px;
+  border-radius: 3px;
+  transition: all 0.3s ease-in-out;
+}
+
+.checkbox:checked:before {
+  transform: translate(-50%, -50%) scale(1);
+}
+
+.checkboxLabel {
+  font-size: 18px;
+  color: var(--black);
+  cursor: pointer;
+  user-select: none;
+  display: flex;
+  align-items: center;
+  margin-bottom: 1em;
+}
+
 .noStyleUL {
   list-style-type: none;
   padding-left: 0;
