--- a/style/components/header.css
+++ b/style/components/header.css
@@ -54,7 +54,8 @@ header {
   align-items: center;
   justify-content: end;
   /* padding-right: 2em; */
-  font-size: 0.9rem;
+  gap: 0.5em;
+  font-size: 0.7rem;
   flex: 1;
 }
 
