--- a/style/components/about.css
+++ b/style/components/about.css
@@ -1,12 +1,35 @@
 .aboutMain {
-display: grid;
-grid-template-columns: repeat(3, 1fr);
-grid-template-rows: repeat(3, 1fr);
-grid-column-gap: 0px;
-grid-row-gap: 0px;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(3, 1fr);
+  gap: 1em;
+  margin-top: 5em;
+}
+.aboutProject {
+  grid-area: 1 / 1 / 3 / 3;
+}
+.aboutTimeline {
+  grid-area: 1 / 3 / 3 / 4;
 }
 
-.div1 { grid-area: 1 / 1 / 3 / 3; }
-.div2 { grid-area: 1 / 3 / 3 / 4; }
-.div3 { grid-area: 3 / 1 / 4 / 3; }
-.div4 { grid-area: 3 / 3 / 4 / 4; }
+.aboutTimeline h1 {
+  font-size: 2rem;
+  margin: 0 0 0.5em 0;
+}
+.aboutTimeline h2 {
+  font-size: 1.5rem;
+}
+
+.aboutUs {
+  grid-area: 3 / 1 / 4 / 3;
+}
+.aboutOrder {
+  grid-area: 3 / 3 / 4 / 4;
+}
+
+.aboutTile {
+  background: var(--white);
+  border-radius: 1em;
+  border: solid 1px red;
+  padding: 1.2em 1.5em;
+}
