--- a/style/components/about.css
+++ b/style/components/about.css
@@ -19,13 +19,7 @@
   grid-area: 1 / 3 / 2 / 4;
   grid-template-rows: repeat(3, 1fr);
   gap: 1em;
-  margin-top: 5em;
-}
-.aboutProject {
-  grid-area: 1 / 1 / 3 / 3;
-}
-.aboutTimeline {
-  grid-area: 1 / 3 / 3 / 4;
+  /* margin-top: 5em; */
 }
 
 .aboutTimeline h1 {
@@ -75,10 +69,10 @@
 
 .aboutAA {
   margin: -3.5em 0em;
-
+}
 .aboutTile {
   background: var(--white);
   border-radius: 1em;
-  border: solid 1px red;
+  /* border: solid 1px red; */
   padding: 1.2em 1.5em;
 }
