--- a/style/components/generator.css
+++ b/style/components/generator.css
@@ -1,3 +1,7 @@
+.blurred {
+  filter: blur(1rem);
+}
+
 .generator {
   display: flex;
   flex-direction: column;
@@ -19,6 +23,15 @@
 .code {
   flex: 7;
   font-family: "Roboto Mono", monospace;
+}
+
+.codeHeader {
+  cursor: pointer;
+}
+
+.codeInner {
+  transition: 0.3s ease;
+  cursor: pointer;
 }
 
 .uses, .maxUses {
