--- a/style/utils.css
+++ b/style/utils.css
@@ -12,6 +12,7 @@
 @import url("components/toast.css");
 @import url("components/tooltip.css");
 @import url("components/about.css");
+@import url("components/popup.css");
 
 .btnPrimary {
   display: flex;
