--- a/style/components/popup.css
+++ b/style/components/popup.css
@@ -1,85 +1,123 @@
 .popupBackground {
-    position: absolute;
-    top: 0;
-    left: 0;
-    height: 100%;
-    width: 100%;
-    backdrop-filter: blur(.75rem) brightness(0.75);
-    /* border: black 1px solid; */
-}   
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  backdrop-filter: blur(0.75rem) brightness(0.75);
+  /* border: black 1px solid; */
+}
 
 .popup {
-    width: 40rem;
-    height: 25rem;
-    /* border: red 1px solid; */
-    background: var(--white);
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    padding: 1.5rem;
-    border-radius: 1.5rem;
-    display: flex;
-    flex-direction: column;
-    gap: 1.5rem;
+  width: 15rem;
+  /* height: 25rem; */
+  /* border: red 1px solid; */
+  background: var(--white);
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  padding: 1.5rem;
+  border-radius: 1.5rem;
+  display: flex;
+  flex-direction: column;
+  gap: 1.5rem;
 }
 
 .popupTop {
-    /* border: red 1px solid; */
-    flex: 7;
-    border-radius: 1rem;
-    background: oklch(from var(--white) calc(l - 0.05) c h);
-    display: flex;
-    gap: 1.5rem;
-    padding: 1rem 1.2rem;
+  /* border: red 1px solid; */
+  flex: 7;
+  border-radius: 1rem;
+  background: oklch(from var(--white) calc(l - 0.05) c h);
+  display: flex;
+  gap: 1.5rem;
+  padding: 1rem 1.2rem;
 }
 
 .popupOrderDetails {
-    flex: 1;
+  flex: 1;
 }
 
 .popupImage {
+  flex: 1;
+  display: none;
+}
+
+.popupImage img {
+  width: 10rem;
+}
+
+.popupButtons {
+  /* border: blue 1px solid; */
+  flex: 1;
+  border-radius: 1rem;
+  display: flex;
+  flex-direction: column-reverse;
+  gap: 1.5rem;
+}
+
+.popupButton {
+  flex: 1;
+  border-radius: 1rem !important;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 1.5rem;
+}
+
+.popupTable {
+  margin-top: 1rem;
+}
+
+.popupTableRow {
+  display: flex;
+  justify-content: space-between;
+  margin: 0.5rem 0;
+}
+
+.seperator {
+  width: 100%;
+  height: 2px;
+  border-radius: 1px;
+  background-color: oklch(from var(--black) calc(l + 0.4) c h);
+}
+
+/* xs */
+@media (min-width: 475px) {
+  .popup {
+    width: 20rem;
+  }
+}
+
+/* sm */
+@media (min-width: 640px) {
+  .popup {
+    width: 30rem;
+  }
+}
+
+/* md */
+@media (min-width: 768px) {
+  .popupImage {
     flex: 1;
     display: flex;
     justify-content: end;
     align-items: start;
+  }
+  .popupButtons {
+    flex-direction: row;
+  }
 }
 
-.popupImage img {
-    width: 10rem;
+/* lg */
+@media (min-width: 1024px) {
+    .popup {
+        width: 40rem;
+    }
 }
 
+/* xl */
+/* @media (min-width: 1280px) {} */
 
-.popupButtons {
-    /* border: blue 1px solid; */
-    flex: 1;
-    border-radius: 1rem;
-    display: flex;
-    gap: 1.5rem;
-}
-
-.popupButton {
-    flex: 1;
-    border-radius: 1rem !important;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 1.5rem;
-}
-
-.popupTable {
-    margin-top: 1rem;
-}
-
-.popupTableRow {
-    display: flex;
-    justify-content: space-between;
-    margin: 0.5rem 0;
-}
-
-.seperator {
-    width: 100%;
-    height: 2px;
-    border-radius: 1px;
-    background-color: oklch(from var(--black) calc(l + 0.4) c h);
-}
+/* 2xl */
+/* @media (min-width: 1536px) {} */
